--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@ var canvasContext;
 var ballX = 50;
 var ballSpeedX = 10;// to control the ball speed.
 var ballY = 50;
-var ballSpeedY = 4; // to control ball speed(vertical).
+var ballSpeedY = 5; // to control ball speed(vertical).
 var player1score=0;
 var player2score=0;
 const WINNING_SCORE=3;
@@ -21,7 +21,7 @@ const PADDLE_WIDTH = 10;
 
 
 
-
+//function to calculate mouse position.
 function calculateMousePos(evt) {
 		var rect = canvas.getBoundingClientRect();
 		var root = document.documentElement;
@@ -33,7 +33,7 @@ function calculateMousePos(evt) {
 		};
 		
 }
-
+//function to handle mouse click.
 function handleMouseClick(evt) {
 	if(showingWinScreen) {
 		player1score=0;
@@ -78,7 +78,7 @@ function ballReset() {
 	ballY = canvas.height/2;
 }
 
-
+//function for computer movement.
 function computermovement() {
 	var paddle2YCenter = paddle2Y + (PADDLE_HEIGHT/2);
 	if(paddle2YCenter < ballY) {
